add formation_position to table and add swagger specifications
